<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".myprofile">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:clickable="true"
                android:onClick="ONcl"
                android:layout_marginTop="30dp"
                android:text="Back"
                android:textColor="@color/orange"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/text10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="150dp"
                android:layout_marginTop="-10dp"
                android:text="@string/my"
                android:textColor="@color/black"
                android:textSize="40dp" />

            <ImageView
                android:id="@+id/image0011"
                android:layout_width="211dp"
                android:layout_height="186dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/logo" />

            <ImageView
                android:id="@+id/image0012"
                android:layout_width="94dp"
                android:layout_height="73dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                app:srcCompat="@drawable/circle" />

            <TextView
                android:id="@+id/text13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginStart="12dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/text14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginStart="12dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/text15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginStart="12dp"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="370dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:backgroundTint="@color/orange"
                android:text="@string/prof"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
            android:id="@+id/button13"
            android:layout_width="370dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/orange"
            android:text="@string/change"
            android:textColor="@color/white"
            android:textSize="20dp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="370dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/orange"
                android:text="@string/sign"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            app:itemRippleColor="@color/orange"
            app:itemTextColor="@color/orange"
            android:background="@color/gray"
            android:layout_height="wrap_content"
            app:menu="@menu/navigation" />

    </LinearLayout>

</LinearLayout>