<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".password">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:text="Back"
                android:textColor="@color/orange"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/text10"
                android:layout_width="364dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/change"
                android:textColor="@color/black"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/image0011"
                android:layout_width="211dp"
                android:layout_height="186dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/logo" />

            <ImageView
                android:id="@+id/image0012"
                android:layout_width="94dp"
                android:layout_height="73dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                app:srcCompat="@drawable/circle" />

            <EditText
                android:id="@+id/editTextTextEmailAddress10"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="18dp"
                android:layout_marginStart="45dp"
                android:hint="@string/old"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/black"
                />

            <EditText
                android:id="@+id/editTextTextEmailAddress11"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="18dp"
                android:layout_marginStart="45dp"
                android:hint="@string/newp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/black"
                />

            <EditText
                android:id="@+id/editTextTextEmailAddress12"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="18dp"
                android:layout_marginStart="45dp"
                android:hint="@string/confrm"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/black"
                />


            <Button
                android:id="@+id/button16"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/orange"
                android:text="Save Change"
                android:textColor="@color/white"
                android:textSize="20dp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            app:itemRippleColor="@color/orange"
            app:itemTextColor="@color/orange"
            android:background="@color/gray"
            android:layout_height="wrap_content"
            app:menu="@menu/navigation" />

    </LinearLayout>

</LinearLayout>